--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "@vercel/edge": "^0.3.4",
     "@vercel/kv": "^0.2.2",
     "@wagmi/connectors": "^4.1.25",
-    "@wagmi/core": "^2.6.16",
+    "@wagmi/core": "^2.16.4",
+    "@wagmi/vue": "^0.1.10",
     "@walletconnect/web3-provider": "^1.8.0",
     "@web3modal/core": "^4.1.5",
     "@web3modal/ui": "^4.1.5",
