--- a/package.json
+++ b/package.json
@@ -29,11 +29,13 @@
     "axios": "^1.3.4",
     "axios-rate-limit": "^1.3.0",
     "chart.js": "^4.2.1",
+    "echarts": "^5.6.0",
     "ethers": "^5.7.2",
     "ethers-multicall-provider": "^2.0.0",
     "moment": "^2.29.4",
     "viem": "^1.1.7",
     "vue": "^3.2.47",
+    "vue-echarts": "^7.0.3",
     "vue-router": "^4.1.6",
     "vue-tippy": "^6.0.0",
     "vuex": "^4.0.2",
