--- a/package.json
+++ b/package.json
@@ -29,12 +29,10 @@
     "@upstash/ratelimit": "^0.4.3",
     "@vercel/edge": "^0.3.4",
     "@vercel/kv": "^0.2.2",
-    "@wagmi/connectors": "^4.1.25",
-    "@wagmi/core": "^2.6.16",
+    "@wagmi/connectors": "^5.7.11",
+    "@wagmi/core": "^2.16.7",
+    "@wagmi/vue": "^0.1.14",
     "@walletconnect/web3-provider": "^1.8.0",
-    "@web3modal/core": "^4.1.5",
-    "@web3modal/ui": "^4.1.5",
-    "@web3modal/wagmi": "^4.1.5",
     "axios": "^1.3.4",
     "axios-rate-limit": "^1.3.0",
     "chart.js": "^4.2.1",
